--- a/views/partials/header_meta.ejs
+++ b/views/partials/header_meta.ejs
@@ -1,13 +1,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Font Awesome -->
 <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-<!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<!-- CSS tùy chỉnh (nếu có) -->
 <link rel="stylesheet" href="/css/header.css">
 <link rel="stylesheet" href="/css/Account.css">
-<link rel="stylesheet" href="/stylesheets/style.css"> <% // Đảm bảo có style.css cho trang social nếu cần %>
+<link rel="stylesheet" href="/stylesheets/style.css"> 
