--- a/views/public/html/reset_password.ejs
+++ b/views/public/html/reset_password.ejs
@@ -1,9 +1,8 @@
-<!-- views/public/html/reset_password.ejs -->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Đặt lại mật khẩu</title>
-    <link rel="stylesheet" href="/css/ĐN.css" type="text/css"> <!-- Sử dụng lại CSS của trang đăng nhập -->
+    <link rel="stylesheet" href="/css/ĐN.css" type="text/css"> 
 </head>
 <body>
     <div class="gdđn">
